# miriad-python

./: .gitignore  LICENSE  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  f2py-copynotice.txt  mirexec.py  miriad-pytask.pc.in  miriad-python.pc.in  miriad.py  mirpyhelp.py  mirpymodtask  mirpymodtask.py  numutils.py  python.m4
build-aux/: .gitignore  python.m4
doc/: Makefile.am  conf.py  conf.py.in  data-highlev.txt  data-lowlev.txt  data-util.txt  data.txt  executing.txt  index.txt  intro.txt  pytasks-cliutil.txt  pytasks-keys.txt  pytasks-uvdat.txt  pytasks.txt
doc/static/: .gitignore
examples/: Makefile.am  README  chanaver.py  gpcat  rtft  varcat
mirtask/: Makefile.am  Makefile.hack  __init__.py  _miriad_cmodule.c  _uvdat_compat_24.py  _uvdat_compat_default.py  _uviomodule.c  _uviomodule.h  base.py  cliutil.py  emucal.py  fortranobject.c  fortranobject.h  inputs.list  keys.py  lowlevel.py  mirgood.fproto  miriad_f.fproto  mirtasksupport.c  mirtasksupport.h  mirugly.fproto  mostable.py  readgains.py  util.py  uvdat.py
prototype/: fxcal.py  gpcat.py  gpcat2.py  uvsort.py
samples/: Makefile.am  closanal.py  closure.py  fxcal.py  gpcat2.py  multiflag.py  uvsort.py
test/: keymatchtest.py  opttest.py  uvio-explore.c
tools/: closure.py  uvsort.py
web/: README  index.html  push.sh  style.css
